--- a/app/views/reports/_moving-time.html.erb
+++ b/app/views/reports/_moving-time.html.erb
@@ -4,7 +4,7 @@
     <div class="col-sm-3" style="text-align: center;border-right: 1px solid #ccc;">
       <label>Condition</label>
 
-      <p style="padding-top: 5px;padding-bottom: 18px;">WorkingTime Detail Column Chart</p>
+      <p style="padding-top: 5px;padding-bottom: 18px;">MovingTime Detail Column Chart</p>
     </div>
 
     <div class="col-sm-3" style="text-align: center;">
@@ -19,16 +19,14 @@
 
     <div class="col-sm-3" style="padding-top: 10px;padding-bottom:10px;border-left: 1px solid #ccc; display: flex;border-right: 1px solid #ccc;">
       <div style="margin-top: 10px;">
-        <label>近</label>
         <input type="number" style="width: 60px;height: 20px;" class="RecentTime" step="5">
-        <label>分钟</label>
+        <label>Min</label>
       </div>
       <button class="btn btn-primary RecentTimeBtn" style="width: 60px;">Search</button>
     </div>
 
     <div class="col-sm-3" style="text-align: center;">
       <label>Current time</label>
-
       <p id="current-clock" style="font-size: 20px;font-weight: bold;margin-top: 5px;"></p>
     </div>
   </div>
@@ -52,28 +50,30 @@
 </div>
 
 <!--chart-->
-<div id="charts_containers" style="margin-top: 60px;min-height:300px;"></div>
-
+<div class="col-sm-12" style="padding: 0;">
+  <div id="charts_containers" style="min-height:300px;"></div>
+</div>
 <hr style="border-bottom: 4px solid #000;">
 
 <!--table-->
-<div id="data_chartcontainer" class="data_container" style="margin-top: 20px;">
-  <table class="table table-bordered table-hover">
-    <thead>
-    <tr class="thead-tr">
-    </tr>
-    </thead>
-    <tbody class="tbody-tr">
-    <tr class="tbody-target-min">
-    </tr>
-    <tr class="tbody-value">
-    </tr>
-    <tr class="tbody-target-max">
-    </tr>
-    </tbody>
-  </table>
+<div class="col-sm-12">
+  <div id="data_chartcontainer" class="data_container" style="margin-top: 20px;">
+    <table class="table table-bordered table-hover">
+      <thead>
+      <tr class="thead-tr">
+      </tr>
+      </thead>
+      <tbody class="tbody-tr">
+      <tr class="tbody-target-min">
+      </tr>
+      <tr class="tbody-value">
+      </tr>
+      <tr class="tbody-target-max">
+      </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
-
 <style>
   .table > thead > tr > th, .table > tbody > tr > td {
     text-align: center;
@@ -82,6 +82,12 @@
 </style>
 
 <script type="text/javascript">
+  var ChartStyle = {
+    ChartBackground: "#ffffff",
+    label_font_color: "black",
+    tooltips_font_color: "black"
+  };
+
   $('.RecentTime').keydown(function (e) {
     var ev = window.event || e;
     if (ev.keyCode == 13) {
@@ -105,11 +111,36 @@
 
   $(document).ready(function () {
     var IsLoading = false;
+    var ClientHeight = $(document).height();
+    var ClientWidth = document.documentElement.clientWidth;
 
     if ($('#from_ipad').val()) {
-      $('.chart-interval-alternate').css({display: "none"});
-      $('#data_chartcontainer').prev('hr').css({display: "none"});
+      $('body').css({
+        overflow: "hidden"
+      });
+      var IpadHeight = document.documentElement.clientHeight;
+      $('#current-status-header').css({
+        paddingTop: "10px",
+        background: '#4682B4',
+        color: "white",
+        borderBottom: "4px solid white"
+      });
+      $('#vehicle-select').css({
+        color: "black"
+      });
+      $('#report-content').css({
+        height: (IpadHeight + 50) + 'px',
+        overflow: 'hidden'
+      });
+      $('.control-chart-interval-group').parent().css({display: "none"});
       $('#data_chartcontainer').css({display: "none"});
+      $('#charts_containers').css({height: (IpadHeight - 15) + "px"});
+      $('.RecentTime').css({
+        color: "black"
+      });
+//      设置 图标 颜色
+      ChartStyle.ChartBackground = "#4682B4";
+      ChartStyle.label_font_color = "white";
     } else {
       var ReportMenuStatus = document.getElementById('report-menu').style.display;
 
@@ -118,59 +149,56 @@
       } else {
         $('#data_chartcontainer').css({width: (ClientWidth - 230) + 'px', overflowX: 'auto'});
       }
-    }
 
-    $('.control-chart-interval-group li').each(function () {
-      $(this).click(function () {
-        $('.control-chart-interval-group li').css({color: 'black', opacity: '0.3'});
-        $('.control-chart-interval-group li').attr('datatype', 'false');
+      $('.control-chart-interval-group li').each(function () {
+        $(this).click(function () {
+          $('.control-chart-interval-group li').css({color: 'black', opacity: '0.3'});
+          $('.control-chart-interval-group li').attr('datatype', 'false');
 
-        if ($('#from_ipad').val()) {
-          show_loading(70, 0, 0, 0);
-        } else {
-          if (ReportMenuStatus == 'none') {
+          if ($('#from_ipad').val()) {
             show_loading(70, 0, 0, 0);
           } else {
-            show_loading(70, 0, 0, 230);
+            if (ReportMenuStatus == 'none') {
+              show_loading(70, 0, 0, 0);
+            } else {
+              show_loading(70, 0, 0, 230);
+            }
           }
-        }
 
-        $(this).css({opacity: '1'});
-        $(this).attr('datatype', 'true');
+          $(this).css({opacity: '1'});
+          $(this).attr('datatype', 'true');
 
-        var Choose_Interval_Code = $(this).attr('interval');
-        var ProductLine = $('#vehicle-select').val();
-        var now = new Date();
-        var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
-        var start_time = startRecentTime();
-        $.ajax({
-          url: '/departments/moving_kpi_data',
-          type: 'get',
-          data: {
-            interval: Choose_Interval_Code,
-            product_line: ProductLine,
-            start_time: start_time,
-            end_time: end_time
-          },
-          success: function (data) {
-            remove_loading();
-          }
-          ,
-          error: function () {
-            console.log("Error");
-          }
-        })
-        ;
+          var Choose_Interval_Code = $(this).attr('interval');
+          var ProductLine = $('#vehicle-select').val();
+          var now = new Date();
+          var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+          var start_time = startRecentTime();
+          $.ajax({
+            url: '/departments/moving_kpi_data',
+            type: 'get',
+            data: {
+              interval: Choose_Interval_Code,
+              product_line: ProductLine,
+              start_time: start_time,
+              end_time: end_time
+            },
+            success: function (data) {
+              remove_loading();
+            }
+            ,
+            error: function () {
+              console.log("Error");
+            }
+          })
+          ;
+        });
       });
-    });
 
-    var ClientHeight = $(document).height();
-    var ClientWidth = document.documentElement.clientWidth;
-
-    $('#report-content').css({
-      height: (ClientHeight - 70) + 'px',
-      overflow: 'auto'
-    });
+      $('#report-content').css({
+        height: (ClientHeight - 70) + 'px',
+        overflow: 'auto'
+      });
+    }
 
     if (localStorage.box_msg) {
       var box_msg = localStorage.box_msg;
@@ -288,7 +316,7 @@
         $('<td>Target Max</td>').appendTo('.tbody-target-max').ready(function () {
         });
 
-        $('<td>CycleTime</td>').appendTo('.tbody-value').ready(function () {
+        $('<td>MovingTime</td>').appendTo('.tbody-value').ready(function () {
         });
 
         /*table*/
@@ -317,10 +345,16 @@
           }
         }
 
-        /*chart*/
+        var clickDetected = false;
         var chart = $('#charts_containers').highcharts({
+          chart: {
+            backgroundColor: ChartStyle.ChartBackground
+          },
           title: {
-            text: 'CycleTime', x: -20 //center
+            text: 'MovingTime', x: -20, //center
+            style: {
+              color: ChartStyle.label_font_color
+            }
           },
           credits: {
             enabled: false
@@ -332,41 +366,90 @@
             labels: {
               formatter: function () {
                 return this.value.split("#")[1];
+              },
+              style: {
+                color: ChartStyle.label_font_color
               }
             }
           },
           yAxis: {
-            title: {text: 'Time(s)'},
-            plotLines: [{value: 0, width: 1, color: '#808080'}]
+            title: {
+              text: 'Time(s)',
+              style: {
+                color: ChartStyle.label_font_color
+              }
+            },
+            plotLines: [{value: 0, width: 1, color: ChartStyle.label_font_color}],
+            labels: {
+              style: {
+                color: ChartStyle.label_font_color
+              }
+            }
           },
           tooltip: {
             valueSuffix: 's',
             formatter: function () {
               return '<span><b>' + this.x.split('#')[0] +
                   '</b><br/><b>' + this.series.name + ':</b><b>' + this.y + ' s</b><br/><b>TotalCount:</b><b>' + this.x.split('#')[2] + '</b><span>';
+            },
+            style: {
+              color: ChartStyle.tooltips_font_color
             }
           },
-          legend: {layout: 'horizontal', align: 'center', verticalAlign: 'bottom', borderHeight: 0},
+          legend: {
+            layout: 'horizontal',
+            align: 'center',
+            verticalAlign: 'bottom',
+            borderHeight: 0,
+            itemStyle: {
+              color: ChartStyle.label_font_color
+            }
+          },
           plotOptions: {
             column: {
               dataLabels: {
-                enabled: true
+                enabled: true,
+                color: ChartStyle.label_font_color
               },
               events: {
                 click: function (e) {
-                  var over_id = "Line_" + productLine + "_interval_" + chartdatatype + "_box_" + e.point.id;
-                  if (window.localStorage) {
-                    localStorage.box_msg = over_id;
-                    localStorage.box_name = e.point.category;
-                    localStorage.pre_url = window.location.host + '/reports#moving_time';
-                    localStorage.recent_time = $('.RecentTime').val();
-                    window.location.href = 'reports#moving_time_history';
-                    location.reload();
+                  if ($('#from_ipad').val()) {
+                    var over_id = "Line_" + productLine + "_interval_" + chartdatatype + "_box_" + e.point.id;
+                    if (window.localStorage) {
+                      localStorage.box_msg = over_id;
+                      localStorage.box_name = e.point.category;
+                      localStorage.pre_url = window.location.host + '/reports#moving_time';
+                      localStorage.recent_time = $('.RecentTime').val();
+                      var entity_group_id = e.point.id;
+                      window.location.href = "/reports?from_ipad=true&part=105&entity_group_id=" + entity_group_id;
+                    } else {
+                      alert('This browser does NOT support localStorage,please change browser.');
+                    }
+//                    if (clickDetected) {
+
+//                    } else {
+//                      clickDetected = true;
+//                      setTimeout(function () {
+//                        clickDetected = false;
+//                      }, 500);
+//                    }
                   } else {
-                    alert('This browser does NOT support localStorage,please change browser.');
+                    var over_id = "Line_" + productLine + "_interval_" + chartdatatype + "_box_" + e.point.id;
+                    if (window.localStorage) {
+                      localStorage.box_msg = over_id;
+                      localStorage.box_name = e.point.category;
+                      localStorage.pre_url = window.location.host + '/reports#moving_time';
+                      localStorage.recent_time = $('.RecentTime').val();
+                      window.location.href = 'reports#moving_time_history';
+                      location.reload();
+                    } else {
+                      alert('This browser does NOT support localStorage,please change browser.');
+                    }
                   }
                 }
-              }
+              },
+              color: ChartStyle.label_font_color,
+              borderWidth: '0'
             }
           },
           series: [
