--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -1,6 +1,6 @@
 <section id="current-status">
   <section id="current-status-normal">
-    <div class=" col-sm-12" id="current-status-header" style="background: #fefefe;border-bottom: 4px solid #000;">
+    <div class=" col-sm-12" id="current-status-header" style="background: #fefefe;border-bottom: 4px solid #000;margin-top: 10px;">
       <div class="col-sm-3" style="border-right: 1px solid #ccc; text-align: center;">
         <label>Condition</label>
         <p style="padding-top: 10px; padding-bottom: 10px;">CycleTime Current Status Block Chart</p>
@@ -18,9 +18,8 @@
 
       <div class="col-sm-3" style="padding-top: 10px;padding-bottom:10px;border-left: 1px solid #ccc; display: flex;">
         <div style="margin-top: 10px;">
-          <label>近</label>
-          <input type="number" style="width: 60px;height: 20px;" class="RecentTime" step="5">
-          <label>分钟</label>
+          <input type="number" style="width: 60px;height: 20px; color:black;" class="RecentTime" step="5">
+          <label>Min</label>
         </div>
         <button class="btn btn-primary RecentTimeBtn" style="width: 60px;">Search</button>
       </div>
@@ -123,7 +122,6 @@
     $('#end_time').attr('value', current_time);
   }
 
-
   $(document).ready(function () {
     $('.download-panel').hide();
     /*时间刷新*/
@@ -132,14 +130,27 @@
     }, 500);
 
     if ($('#from_ipad').val()) {
-      $('.control-chart-interval-group').parent().css({display: "none"});
+      var ClientHeight = $(document).height();
+      var ClientWidth = document.documentElement.clientWidth;
 
+      $('.control-chart-interval-group').parent().css({display: "none"});
       var productLine = $('#vehicle-select').val();
       var now = new Date();
       var end_time = now.format("yyyy-MM-dd hh:mm:ss");
       var start_time = startRecentTime();
       loadData(productLine, 100, start_time, end_time);
+
       $('#download').parent().css({display: "none"});
+
+      $('#report-content').css({
+        height: (ClientHeight + 125) + 'px',
+        background: "white"
+      });
+
+      $('#data_container').css({
+        marginRight: "30px"
+      });
+
     } else {
       jeDate({
         dateCell: "#start_time",
@@ -196,31 +207,29 @@
         height: (ClientHeight - 70) + 'px',
         overflow: 'auto'
       });
+    }
 
-      if (localStorage.box_msg) {
-        var box_msg = localStorage.box_msg;
-        $(".RecentTime").val(localStorage.recent_time);
-        var productLine = box_msg.split('_')[1];
-        var datatype = box_msg.split('_')[3];
-        $('#vehicle-select option').each(function () {
-          if (($(this).attr('value')) == productLine) {
-            $(this).attr('selected', 'true');
-          }
-        });
-        var now = new Date();
-        var end_time = now.format("yyyy-MM-dd hh:mm:ss");
-        var start_time = startRecentTime();
-        console.log(start_time);
-        console.log(end_time);
-        loadData(productLine, datatype, start_time, end_time);
-      } else {
-        var productLine = $('#vehicle-select').val();
-        var datatype = 100;
-        var now = new Date();
-        var end_time = now.format("yyyy-MM-dd hh:mm:ss");
-        var start_time = startRecentTime();
-        loadData(productLine, datatype, start_time, end_time);
-      }
+    if (localStorage.box_msg) {
+      var box_msg = localStorage.box_msg;
+      $(".RecentTime").val(localStorage.recent_time);
+      var productLine = box_msg.split('_')[1];
+      var datatype = box_msg.split('_')[3];
+      $('#vehicle-select option').each(function () {
+        if (($(this).attr('value')) == productLine) {
+          $(this).attr('selected', 'true');
+        }
+      });
+      var now = new Date();
+      var end_time = now.format("yyyy-MM-dd hh:mm:ss");
+      var start_time = startRecentTime();
+      loadData(productLine, datatype, start_time, end_time);
+    } else {
+      var productLine = $('#vehicle-select').val();
+      var datatype = 100;
+      var now = new Date();
+      var end_time = now.format("yyyy-MM-dd hh:mm:ss");
+      var start_time = startRecentTime();
+      loadData(productLine, datatype, start_time, end_time);
     }
   });
 
@@ -344,15 +353,24 @@
     var over_id_name = over_id_content.split('<i')[0].split('<span>')[1].split('<')[0];
     $('#' + over_id).children('i').fadeIn(400);
     $('#' + over_id).click(function () {
-      if (window.localStorage) {
+      if ($('#from_ipad').val()) {
         localStorage.box_msg = over_id;
         localStorage.box_name = over_id_name;
         localStorage.recent_time = RecentTimeValue;
         localStorage.pre_url = window.location.host + '/reports#current_status';
-        window.location.href = 'reports#defects';
-        location.reload();
+        var entity_group_id = BoxID;
+        window.location.href = "/reports?from_ipad=true&part=103&entity_group_id=" + entity_group_id;
       } else {
-        alert('This browser does NOT support localStorage,please change browser.');
+        if (window.localStorage) {
+          localStorage.box_msg = over_id;
+          localStorage.box_name = over_id_name;
+          localStorage.recent_time = RecentTimeValue;
+          localStorage.pre_url = window.location.host + '/reports#current_status';
+          window.location.href = 'reports#defects';
+          location.reload();
+        } else {
+          alert('This browser does NOT support localStorage,please change browser.');
+        }
       }
     });
   }
